# maco_commondriver

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
cdriver/datagen/: lorenz.py  tent_map.py
cdriver/evaluate/: evalz.py
cdriver/network/: anisom.py  maco.py
cdriver/preprocessing/: tde.py
data/: logmap_2d_data.csv  logmap_2d_data2.csv  lorenz_0.npz  tent_1d_data.csv
data/lorenz/: lorenz_0.npz  lorenz_1.npz  lorenz_10.npz  lorenz_11.npz  lorenz_12.npz  lorenz_13.npz  lorenz_14.npz  lorenz_15.npz  lorenz_16.npz  lorenz_17.npz  lorenz_18.npz  lorenz_19.npz  lorenz_2.npz  lorenz_20.npz  lorenz_21.npz  lorenz_22.npz  lorenz_23.npz  lorenz_24.npz  lorenz_25.npz  lorenz_26.npz  lorenz_27.npz  lorenz_28.npz  lorenz_29.npz  lorenz_3.npz  lorenz_30.npz  lorenz_31.npz  lorenz_32.npz  lorenz_33.npz  lorenz_34.npz  lorenz_35.npz  lorenz_36.npz  lorenz_37.npz  lorenz_38.npz  lorenz_39.npz  lorenz_4.npz  lorenz_40.npz  (+64 more)
notebooks/: Logistic_map.ipynb  gen_allfigures.py  gen_exampleResults.py  genfig_coefs_predict_reconst.py  genfig_learningforecast.py  genfig_reconstruction.py
scripts/: Logistic_map.ipynb  figure_onecol_config.mplstyle  figure_twocol_config.mplstyle  gen_allfigures.py  gen_exampleResults.py  genfig_learningforecast.py  genfig_logistic_returnmap.py  genfig_reconstruction.py
scripts_and_results/: Logistic_map.ipynb  data_view.ipynb  gen_exampleResults.py  genfig_coefs_predict_reconst.py  genfig_learningforecast.py  genfig_logistic_returnmap.py  genfig_reconstruction.py  learning_curves.ipynb
tests/: test_anisom.py  test_import.py  test_tde.py
(+207 files in other folders)
