[metadata]
name = cdriver
version = 0.0.1
license = MIT
description = Scripts for hidden common cause reconstruction
long_description = file: README.md
author = Zsigmond Benko
author_email = benko.zsigmond@gmail.com
classifiers=
   Development Status :: 1 - Planning
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering
   Topic :: Scientific/Engineering :: Physics
   Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   matplotlib
   numpy
   pandas
   scikit_learn
   scipy
   torch
   torchvision
   tqdm

[options.packages.find]
where=src
